Added buying aircraft route
