# backend/services/api-gateway/internal/routes/routes.go
@@ -13,12 +13,13 @@ import (
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
-func SetupRoutes(authClient *grpcclient.AuthClient, operationsClient *grpcclient.OperationsClient, socketHub realtime.Hub, config *config.Config) *gin.Engine {
+func SetupRoutes(authClient *grpcclient.AuthClient, operationsClient *grpcclient.OperationsClient, fleetClient *grpcclient.FleetClient, socketHub realtime.Hub, config *config.Config) *gin.Engine {
 	router := gin.Default()
 	router.Use(middleware.CORSMiddleware())
 
 	authHandler := handlers.NewAuthHandler(authClient, config)
 	operationsHandler := handlers.NewOperationsHandler(operationsClient, config) // maybe config is extra
+	fleetHandler := handlers.NewFleetHandler(fleetClient)
 
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	router.GET("/socket.io/*any", gin.WrapH(socketHub.Handler()))
@@ -35,6 +36,8 @@ func SetupRoutes(authClient *grpcclient.AuthClient, operationsClient *grpcclient
 		protected := api.Group("")
 		protected.Use(middleware.AuthMiddleware(config.JWTPublicKey, authClient))
 		{
+			protected.POST("/aircraft", fleetHandler.PurchaseAircraft)
+
 			// admin only
 			adminOnly := api.Group("")
 			adminOnly.Use(middleware.AuthMiddleware(config.JWTPublicKey, authClient), middleware.AdminMiddleware())
