# backend/services/fleet-service/internal/grpcserver/fleet_grpc.go
@@ -1,11 +1,21 @@
 package grpcserver
 
-import "github.com/404-u-team/airlinesim-mono/backend/fleet-service/internal/service"
+import (
+	"context"
+
+	"github.com/404-u-team/airlinesim-mono/backend/fleet-service/internal/service"
+	fleetpb "github.com/404-u-team/airlinesim-mono/backend/shared/contracts/proto/fleet/v1"
+)
 
 type FleetServer struct {
-	service service.FleetService
+	fleetpb.UnimplementedFleetServiceServer
+	fleetService service.FleetService
 }
 
-func NewFleetServer(service service.FleetService) *FleetServer {
-	return &FleetServer{service: service}
+func NewFleetServer(fleetService service.FleetService) *FleetServer {
+	return &FleetServer{fleetService: fleetService}
+}
+
+func (s *FleetServer) CreateAircraft(ctx context.Context, payload *fleetpb.CreateAircraftRequest) (*fleetpb.CreateAircraftResponse, error) {
+	return s.fleetService.CreateAircraft(ctx, payload)
 }
